--- a/examples/simple.yaml
+++ b/examples/simple.yaml
@@ -3,29 +3,11 @@ guid: "demo1"
 yamlforge:
   cloud_workspace:
     name: "simple-demo-{guid}"
-    description: "Simple single instance deployment"
+    description: "Simple single VM demonstration"
   
   instances:
-    - name: "web-server-{guid}"
+    - name: "simple-vm-{guid}"
       provider: "aws"
-      region: "us-east-1"
-      size: "small"
+      flavor: "small"
       image: "RHEL9-latest"
-      ssh_key: "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC..."
-      
-  security_groups:
-    - name: "web-access-{guid}"
-      description: "Allow web traffic"
-      rules:
-        - direction: "ingress"
-          protocol: "tcp"
-          port_range: "80"
-          source: "0.0.0.0/0"
-        - direction: "ingress"
-          protocol: "tcp"
-          port_range: "443"
-          source: "0.0.0.0/0"
-        - direction: "ingress"
-          protocol: "tcp"
-          port_range: "22"
-          source: "0.0.0.0/0" 
+      region: "us-east-1" 
