fix openshift install instructions to be more helpful

--- a/demobuilder/Dockerfile
+++ b/demobuilder/Dockerfile
@@ -1,13 +1,25 @@
-FROM python:3.11-slim
+# Build argument for base image selection
+# Default to RHEL UBI9, but allow Fedora for broader accessibility
+ARG BASE_IMAGE=registry.access.redhat.com/ubi9/python-311:latest
+FROM ${BASE_IMAGE}
 
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    git \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
+# Install system dependencies as root
+USER 0
+
+# Conditional package installation based on base image
+RUN if command -v dnf >/dev/null 2>&1; then \
+        # RHEL/Fedora uses dnf \
+        dnf update -y && dnf clean all; \
+    elif command -v microdnf >/dev/null 2>&1; then \
+        # Some UBI images use microdnf \
+        microdnf update -y && microdnf clean all; \
+    elif command -v apt-get >/dev/null 2>&1; then \
+        # Debian/Ubuntu fallback \
+        apt-get update && apt-get upgrade -y && rm -rf /var/lib/apt/lists/*; \
+    fi
 
 # Copy requirements first for better layer caching
 COPY requirements.txt .
@@ -15,17 +27,15 @@ COPY requirements.txt .
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Create non-root user for security
-RUN groupadd -r demobuilder && useradd -r -g demobuilder demobuilder
-
 # Copy application code
 COPY . .
 
-# Set ownership of application files
-RUN chown -R demobuilder:demobuilder /app
+# Set appropriate permissions for OpenShift
+RUN chgrp -R 0 /app && \
+    chmod -R g=u /app
 
-# Switch to non-root user
-USER demobuilder
+# Switch to non-root user (OpenShift will assign UID)
+USER 1001
 
 # Expose port
 EXPOSE 8501
